tests/baselines/reference/parserIndexSignature5.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature5.ts(2,3): error TS1169: Computed property names are not allowed in interfaces.


==== tests/cases/conformance/parser/ecmascript5/IndexSignatures/parserIndexSignature5.ts (1 errors) ====
    interface I {
      [a]
      ~~~
!!! error TS1169: Computed property names are not allowed in interfaces.
    }